--- a/sites/index.html
+++ b/sites/index.html
@@ -1,38 +1,29 @@
 <!doctype html>
 
-<html>
+<html lang="en-US">
     <head>
+        <link rel="icon" href="../scr/views/icons/icon2.png">
         <meta charset = "utf-8">
-        <title> Hola </title>
-        <style>
-            .row{
-                display:flex;
-            }
-            .row:nth-child(1){
-                background-color:red;
-            }
-            .column{
-                flex:auto;
-            }
-            .column:hover{
-                color:blue;
-                background-color: beige;
-            }
-        </style>
+        <title> Covid RX - Universidad del Magdalena </title>
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
+
         <h1>Covid RX Detection</h1>
         <div class="row">
             <div class="column">
                 <h2>RX Image</h2>
-                <img src="../COVID (13).png" height="70%" alt="">
+                <img src="../COVID(13).png" class="responsive" alt="">
             </div>
             <div class="column">
                 <h2>Heatmap</h2>
-                <img src="../image.png" height="70%" alt="">
+                <img src="../image.png" class="responsive" alt="">
             </div>
         </div>
-        <footer>Copywright &copy; David Navarro & Manuel Jaramillo</footer>
+        <footer>Copywright &copy; Universidad del Magdalena</footer>
+        
     </body>
+
 </html>
 
